# FAEL

./: .gitignore  README.md
fael_planner/control_planner_interface/: CMakeLists.txt  package.xml
fael_planner/control_planner_interface/action/: ExplorerPlanner.action  VehicleExecute.action
fael_planner/control_planner_interface/include/control_planner_interface/: control_planner_interface.h  pci_manager.h  pci_vehicle.h
fael_planner/control_planner_interface/msg/: Path.msg  PlannerMsgs.msg
fael_planner/control_planner_interface/src/: control_planner_interface.cpp  pci_vehicle.cpp
fael_planner/exploration_manager/: CMakeLists.txt  package.xml
fael_planner/exploration_manager/include/explorer/: explorer.h
fael_planner/exploration_manager/launch/: explorer.launch  robot_move.launch  sim_env.launch
fael_planner/exploration_manager/resource/: exploration.rviz
fael_planner/exploration_manager/src/: explorer.cpp  explorer_node.cpp
fael_planner/exploration_manager/worlds/: scene_1.world  scene_2.world  scene_3.world  scene_4.world
fael_planner/planner/: CMakeLists.txt  package.xml
fael_planner/planner/include/graph/: plan_graph.h
fael_planner/planner/include/perception/: grid_map_2d.h  lidar_model.h  map_2d_manager.h  map_3d.h  ufomap.h
fael_planner/planner/include/preprocess/: preprocess.h  topo_graph.h  viewpoint_manager.h
fael_planner/planner/include/rapid_cover_planner/: rapid_cover_planner.h
fael_planner/planner/include/topo_planner/: topo_planner.h
fael_planner/planner/include/tsp_solver/: two_opt.h
fael_planner/planner/include/utils/: frontier.h  point3d.h  viewpoint.h
fael_planner/planner/launch/: planner.launch
fael_planner/planner/msg/: EdgePair.msg  IdPointPair.msg  PreprocessMsgs.msg  RoadMapMsg.msg  ViewpointsWithFrontiers.msg
fael_planner/planner/resource/: topo_planner.rviz  topo_planner_1.yaml
fael_planner/planner/src/graph/: kdtree.c  plan_graph.cpp
fael_planner/planner/src/perception/: grid_map_2d.cpp  lidar_model.cpp  map_2d_manager.cpp  ufomap.cpp
fael_planner/planner/src/preprocess/: topo_graph.cpp  viewpoint_manager.cpp
fael_planner/planner/src/rapid_cover_planner/: rapid_cover_planner.cpp
fael_planner/planner/src/topo_planner/: topo_planner.cpp  topo_planner_node.cpp
fael_planner/planner/src/tsp_solver/: two_opt.cpp
fael_planner/robot_move/cmu_planner/local_planner/: CMakeLists.txt
fael_planner/robot_move/cmu_planner/terrain_analysis/: CMakeLists.txt
fael_planner/robot_move/path_execution/: CMakeLists.txt  package.xml
fael_planner/robot_move/path_execution/launch/: path_execution.launch
fael_planner/robot_move/path_execution/src/: occupancy_map_2d.cpp  path_execution.cpp  path_execution_node.cpp
fael_planner/robot_move/traversability_analysis/: CMakeLists.txt  package.xml
fael_planner/robot_move/traversability_analysis/launch/: traversability_analysis_3d.launch
fael_planner/robot_move/traversability_analysis/msg/: TerrainGrid.msg  TerrainMap.msg
fael_planner/robot_move/traversability_analysis/src/: online_local_map_node.cpp  (+2 more)
fael_planner/sensor_conversion/: CMakeLists.txt  package.xml
fael_planner/sensor_conversion/include/: cartographer_output.h
fael_planner/sensor_conversion/src/: sensor_odom_to_world.cpp  slam_output.cpp  slam_output_node.cpp
fael_planner/visualization_tools/: CMakeLists.txt  package.xml
fael_planner/visualization_tools/include/: exploration_data.h
fael_planner/visualization_tools/launch/: visualization_tools.launch
fael_planner/visualization_tools/msg/: ExploredVolumeTime.msg  ExploredVolumeTravedDist.msg  ExploredVolumeTravedDistTime.msg  IterationTime.msg  TravedDistTime.msg  ViewpointGain.msg
fael_planner/visualization_tools/scripts/: realTimePlot.py
fael_planner/visualization_tools/src/: exploration_data.cpp
sim_env/10_22outside/: CMakeLists.txt  package.xml
sim_env/10_22outside/config/: joint_names_10_22outside.yaml
sim_env/10_22outside/launch/: display.launch  gazebo.launch
sim_env/10_22outside/meshes/: Empty_Link.STL  base_link.STL
sim_env/10_22outside/urdf/: 10_22outside.csv  10_22outside.urdf
sim_env/10_22room2/: CMakeLists.txt  package.xml
sim_env/10_22room2/launch/: display.launch  gazebo.launch
sim_env/10_22room2/meshes/: base_link.STL  fixed1.STL  fixed2.STL
sim_env/10_22room2/urdf/: 10_22room2.csv  10_22room2.urdf
(+9 files in other folders)
